[package]
name = "sandwich-recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.146", features = ["derive"] }
actix-web = "4"
validator = { version = "0.16.0", features = ["derive"] }
serde_qs = { version = "0.11", features = ["actix4"]}
env_logger = "0.10.0"
